Menu: remove obsolete fix for scrollbar in Firefox and IE, see #67605

--- a/src/scss/themes/fylr/components/_layer.scss
+++ b/src/scss/themes/fylr/components/_layer.scss
@@ -285,16 +285,6 @@
 	}
 }
 
-// * Select menu
-
-// todo: check if we still need this
-.cui-select-menu {
-	.cui-browser-firefox &,
-	.cui-browser-ie & {
-		overflow-y: scroll; // prevents overlap with scrollbar in Firefox & IE but adds a deactivated scrollbar when no scrollbar is neccesary
-	}
-}
-
 
 // * Autocompletion select menu
 
